src/test/error/check_quote_not_closed.c
/* ************************************************************************** */
/*                                                                            */
/*                                                        :::      ::::::::   */
/*   check_quote_not_closed.c                           :+:      :+:    :+:   */
/*                                                    +:+ +:+         +:+     */
/*   By: mcha <mcha@student.42.fr>                  +#+  +:+       +#+        */
/*                                                +#+#+#+#+#+   +#+           */
/*   Created: 2022/05/27 20:35:59 by mcha              #+#    #+#             */
/*   Updated: 2022/05/30 15:36:08 by mcha             ###   ########.fr       */
/*                                                                            */
/* ************************************************************************** */

#include "head.h"

int	check_quote_not_closed(t_unit_head *head, char *buf)
{
	char	*ptr;
	int		bit;

	ptr = buf;
	bit = 0;
	while (*ptr)
	{
		if (error_is_quot(bit, *ptr))
			control_quote(&bit, *ptr);
		ptr++;
	}
	if (judge_is_quote_error(bit))
	{
		print_error(head, ERROR_QUOT);
		return (1);
	}
	return (0);
}
